Fix title overflow

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -21,3 +21,10 @@
     border-radius: 0 .25rem 0 .25rem ;
     padding: 2px 5px 0;
 }
+
+.card-body h5 {
+    max-width: 180px;
+    white-space: nowrap;
+    overflow: hidden!important;
+    text-overflow: ellipsis;
+}
